--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.7.1"
+    "graphql": "^16.7.1",
+    "lodash": "^4.17.21",
+    "nodemon": "^2.0.22"
   }
 }
