--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.7.1",
     "lodash": "^4.17.21",
+    "mongoose": "^7.3.2",
     "nodemon": "^2.0.22"
   }
 }
